--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,20 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
-.alert-container{
-
+.alert-container .col-12{
+    padding-left: 0%;
+    padding-right: 0%;
 }
+.side-wide-alert{
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    border-color:#eec802;
+    background-color: #eec802;
+}
+
+
+
 .callout-container{
     height:100vh;
   background: url(../images/whiskey-background.jpg) no-repeat bottom right fixed; 
@@ -81,4 +92,29 @@ border-color:#f05f40;
 color:white ;
 background-color:#e05032;
 border-color:#f05f40;
+}
+/*navbar*/
+.navalert-container{
+position: absolute;
+top: 0;
+left:0; 
+padding-left: 0;
+padding-right: 0;
+z-index: 1;
+}
+.navbar{
+    margin-bottom: 0;
+    border: 0;
+    width:100%;
+    background-color: rgba(0,0,0,0.25);
+}
+.navbar .navbar-toggler{
+    border: 0;
+}
+.navbar-brand{
+    font-weight: bold;
+
+}
+.navbar .navbar-nav a{
+    font-weight: bold;
 }
