--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body{
 .alert-container .col-12{
     padding-left: 0%;
     padding-right: 0%;
+
+}
+.container-wrapper{
+
+}
+.container-wrapper--red{
+    background-color: #f05f40;
+    color:white;
 }
 .side-wide-alert{
     border-radius: 0;
@@ -38,6 +46,17 @@ body{
 .quotes-container{
     
 }
+/*page headers*/
+
+.page-header{
+margin-bottom: 0;
+margin-bottom: 0;
+text-align:center;
+}
+page-header h2 {
+    margin-top: 0;
+}
+
 .features-container{
     
 }
@@ -61,16 +80,26 @@ background-color:transparent;
     margin:25px 0;
 }
 /*block dividers*/
-.block-divider {
-width: 75px;
-height: 5px;
-border: 0;
+.blockdivider{
+width:75px;
+height:5px;
+border:0;
+background-color:#444;
 }
 .block-divider-orange{
     background-color:#f05f40;
 }
 .block-divider-short{
 widows: 35px;ß
+
+}
+.blockdivider--white{
+background-color: white;
+}
+/*Content container*/
+.content-container{
+    padding-top: 75px;
+    padding-bottom:75px;
 }
 /*buttoms*/
 .btn--cta{
@@ -92,6 +121,10 @@ border-color:#f05f40;
 color:white ;
 background-color:#e05032;
 border-color:#f05f40;
+}
+.feature{
+    text-align: center;
+    margin-bottom: 40px;
 }
 /*navbar*/
 .navalert-container{
