--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ background-color:#444;
 .block-divider--orange{
     background-color:#f05f40;
 }
-.block-divider-short{
+.block-divider--short{
 widows: 35px;ß
 
 }
